samples/_failures_safe/1761645931_265f20_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_95263ddd.c: In function ‘main’:
./samples/SAFE/__tmp_95263ddd.c:155:58: error: ‘EVENT’ undeclared (first use in this function)
  155 |     state_machine_add_transition(&config, STATE_WRITING, EVENT
      |                                                          ^~~~~
./samples/SAFE/__tmp_95263ddd.c:155:58: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_95263ddd.c:155:63: error: expected ‘)’ at end of input
  155 |     state_machine_add_transition(&config, STATE_WRITING, EVENT
      |                                 ~                             ^
      |                                                               )
./samples/SAFE/__tmp_95263ddd.c:155:5: error: too few arguments to function ‘state_machine_add_transition’
  155 |     state_machine_add_transition(&config, STATE_WRITING, EVENT
      |     ^~~~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_95263ddd.c:62:5: note: declared here
   62 | int state_machine_add_transition(struct StateMachineConfig *config, enum State from, enum Event event, enum State to) {
      |     ^~~~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_95263ddd.c:155:5: error: expected declaration or statement at end of input
  155 |     state_machine_add_transition(&config, STATE_WRITING, EVENT
      |     ^~~~~~~~~~~~~~~~~~~~~~~~~~~~
